--- a/Cindy/CSS/style.css
+++ b/Cindy/CSS/style.css
@@ -34,10 +34,6 @@ h2 {
     font-family: var(--font-family);
     margin-bottom: 45px;
 }
-img {
-    max-width: 100%;
-}
-
 
 /* main title style */
 .main-title {
@@ -528,11 +524,11 @@ footer .about {
     background-color: var(--font-color-hover);
     color: white;
 }
-.product-card .ImgForm .quantity, .cart_quntity .quantity {
+.product-card .ImgForm .quantity {
     border: 1px solid var(--font-color);
     width: 150px;
 }
-.product-card .ImgForm .quantity i:first-of-type, .cart_quntity i:first-of-type{
+.product-card .ImgForm .quantity i:first-of-type{
     cursor: not-allowed;
     color: #9d969d;
 }
@@ -595,18 +591,21 @@ footer .about {
 }
 
 
-/* ///////////////////////////////////////////// */
-.cart_box .cart_img img {
-    width: 160px;
+
+/* cart style */
+.empty {
+    height: 387px;
+    flex-direction: column;
 }
-.cart_img, .cart_quntity {
-    display: flex;
+.empty a {
+    background-color: var(--font-color-hover);
+    color: white;
+    padding: 13px 30px;
 }
-.cart_quntity {
-    align-items: center;
-}
-.cart_box {
-    color: var(--font-color);
-    margin-top: 20px;
-    align-items: start;
+.empty a:hover {
+    transform: scaleY(1.03);
+    -webkit-transform: scaleY(1.03);
+    -moz-transform: scaleY(1.03);
+    -ms-transform: scaleY(1.03);
+    -o-transform: scaleY(1.03);
 }
