--- a/first_project/style.css
+++ b/first_project/style.css
@@ -391,10 +391,9 @@ footer {
         margin-top: 10px;
     }
 }
-@media (min-width: 768px) {
+@media (min-width: 768px), (max-width: 768px) {
     .top_part {
         flex-direction: column;
-        align-items: flex-start;
     }
     .top_part div {
         flex-basis: content;
